creating card-item component

--- a/rbmk-store/src/app/store-section/store-section.component.html
+++ b/rbmk-store/src/app/store-section/store-section.component.html
@@ -1,10 +1,4 @@
-<p>store-section works!</p>
-
-<mat-card>
-  <mat-card-content>
-    <p>basic angular material card</p>
-  </mat-card-content>
-</mat-card>
+<app-card-item></app-card-item>
 
 <button mat-raised-button color="warn">mat raised button</button>
 
