--- a/rbmk-store/src/app/app.component.html
+++ b/rbmk-store/src/app/app.component.html
@@ -1,3 +1,5 @@
-<p>home</p>
+<div class="main-container">
 
-<app-store-section></app-store-section>
+  <app-store-section></app-store-section>
+
+</div>
