--- a/rbmk-store/src/app/components/card-item/card-item.component.scss
+++ b/rbmk-store/src/app/components/card-item/card-item.component.scss
@@ -2,6 +2,9 @@
   width: 33%;
   padding: 0 1rem;
   box-sizing: border-box;
+  -webkit-box-shadow: 3px 3px 10px 2px rgba(0,0,0,0.1);
+  -moz-box-shadow: 3px 3px 10px 2px rgba(0,0,0,0.1);
+  box-shadow: 3px 3px 10px 2px rgba(0,0,0,0.1);
   .cardImg-wrapper {
     max-width: 100%;
   }
