--- a/rbmk-store/src/app/app.component.html
+++ b/rbmk-store/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="main-container">
 
-  <app-store-section></app-store-section>
+  <app-banner></app-banner>
+
+  <div class="content-container">
+
+    <app-store-section></app-store-section>
+
+  </div>
 
 </div>
