--- a/rbmk-store/src/app/components/card-item/card-item.component.html
+++ b/rbmk-store/src/app/components/card-item/card-item.component.html
@@ -1,5 +1,7 @@
 <mat-card class="card-wrapper">
-  <img mat-card-md-image src="../../../assets/mask-front.webp" alt="anti-radiation" >
+  <div class="cardImg-wrapper">
+    <img mat-card-md-image src="../../../assets/mask-front.webp" alt="anti-radiation" >
+  </div>
   <mat-card-header>
     <mat-card-title>Anti-radiation Mask</mat-card-title>
   </mat-card-header>
