--- a/rbmk-store/src/app/store-section/store-section.component.html
+++ b/rbmk-store/src/app/store-section/store-section.component.html
@@ -1,1 +1,7 @@
-<app-card-item></app-card-item>
+<div class="section-container">
+
+  <app-title-section></app-title-section>
+
+  <app-card-item></app-card-item>
+
+</div>
