--- a/rbmk-store/src/app/app.component.scss
+++ b/rbmk-store/src/app/app.component.scss
@@ -1,5 +1,9 @@
+
 .main-container {
   width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
+  .content-container {
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+  }
 }
