font-family and color variables

--- a/rbmk-store/src/app/components/banner/banner.component.html
+++ b/rbmk-store/src/app/components/banner/banner.component.html
@@ -1,6 +1,6 @@
 <div class="banner-img">
   <div class="banner-title-wrapper">
-    <h1 [ngClass]="'banner-title'">REAKTOR - 04</h1>
-    <h2 [ngClass]="'banner-subtitle'" >Survival Guide</h2>
+    <h1 [ngClass]="'banner-title'">CHERNOBYL - RBMK.04</h1>
+    <h2 [ngClass]="'banner-subtitle'" >SURVIVAL GUIDE</h2>
   </div>
 </div>
