--- a/rbmk-store/src/app/components/card-item/card-item.component.scss
+++ b/rbmk-store/src/app/components/card-item/card-item.component.scss
@@ -10,9 +10,7 @@
     display: flex;
     justify-content: center;
   }
-}
-
-.test-text {
-  font-size: 3rem;
-  color: red;
+  .cardText {
+    margin-top: 0;
+  }
 }
