--- a/rbmk-store/src/app/components/title-section/title-section.component.scss
+++ b/rbmk-store/src/app/components/title-section/title-section.component.scss
@@ -1,7 +1,7 @@
 .title-wrapper {
   margin-bottom: 2rem;
   .title-section, .subtitle {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Soviet', sans-serif;
   }
   .title-section {
     margin-top: 0;
