add ptrviews components n testing standalmone

--- a/rbmk-store/src/app/app.component.html
+++ b/rbmk-store/src/app/app.component.html
@@ -1,11 +1,1 @@
-<div class="main-container">
-
-  <app-banner></app-banner>
-
-  <div class="content-container">
-
-    <app-store-section></app-store-section>
-
-  </div>
-
-</div>
+<router-outlet></router-outlet>
