--- a/rbmk-store/src/app/components/banner/banner.component.html
+++ b/rbmk-store/src/app/components/banner/banner.component.html
@@ -1,4 +1,10 @@
 <div class="banner-img">
+  <nav>
+    <a routerLink="/produto" routerLinkActive="active" ariaCurrentWhenActive="page">Produto</a>
+  </nav>
+  <div>
+    <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a>
+  </div>
   <div class="banner-title-wrapper">
     <h1 [ngClass]="'banner-title'">CHERNOBYL - RBMK.04</h1>
     <h2 [ngClass]="'banner-subtitle'" >SURVIVAL GUIDE</h2>
