--- a/rbmk-store/src/app/store-section/store-section.component.html
+++ b/rbmk-store/src/app/store-section/store-section.component.html
@@ -1,7 +1,8 @@
 <div class="section-container">
-
+  <a routerLink="../produto" routerLinkActive="active" ariaCurrentWhenActive="page">link prod</a>
   <app-title-section></app-title-section>
 
   <app-card-item></app-card-item>
 
 </div>
+
