--- a/rbmk-store/src/app/components/card-item/card-item.component.html
+++ b/rbmk-store/src/app/components/card-item/card-item.component.html
@@ -1,14 +1,16 @@
-<a href="#">
-  <mat-card class="card-wrapper">
-    <div class="cardImg-wrapper">
-      <img mat-card-md-image src="../../../assets/mask-front.jpeg" alt="anti-radiation" >
-    </div>
-    <mat-card-header>
-      <mat-card-title>Anti-radiation Mask</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <p class="cardText">To extremely situations. Despite the scary appearance, the anti-radiation mask is renewed and it is improved in terms of comfort.</p>
-    </mat-card-content>
+<mat-card class="card-wrapper">
+  <div class="cardImg-wrapper">
+    <img mat-card-md-image src="../../../assets/mask-front.jpeg" alt="anti-radiation" >
+  </div>
+  <mat-card-header>
+    <mat-card-title>Anti-radiation Mask</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p class="cardText">To extremely situations. Despite the scary appearance, the anti-radiation mask is renewed and it is improved in terms of comfort.</p>
+  </mat-card-content>
 
-  </mat-card>
-</a>
+</mat-card>
+<a routerLink="/produto" routerLinkActive="active" ariaCurrentWhenActive="page">Produto</a>
+
+<router-outlet></router-outlet>
+
